Bug 4 squashed

--- a/Coding/Stylesheets/mss.css
+++ b/Coding/Stylesheets/mss.css
@@ -128,7 +128,7 @@ a:hover {
 
 .obscureTextDiplo {
   color: black;
-  background-color: gray;
+  background-color: lightgray;
 }
 
 .obscureTextSemi {
